--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5",
-    "openai": "^4.16.1"
+    "openai": "^4.16.1",
+    "@pinecone-database/pinecone": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
